--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <h2 > hi </h2>
    </center>
   
-  <img src="" alt="description of image">
+  <img src="Screen Shot 2020-12-17 at 3.27.00 PM.png" alt="description of image">
 </body>
