--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
-<body bgcolor = "green">
+<body>
   <center>
     <h1>Otis Gordon</h1>
-    <h2 > hi </h2>
+    <h2 > reach out to your loved ones </h2>
    </center>
-  
-  <img src="Screen Shot 2020-12-17 at 3.27.00 PM.png" alt="description of image">
+
+  <img src="Screen Shot 2020-12-17 at 3.27.00 PM.png" alt="Annnie dancing">
 </body>
