--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!--
 <body>
   <center>
     <h1>Otis Gordon</h1>
@@ -7,3 +7,38 @@
 
   <img src="Screen Shot 2020-12-17 at 3.27.00 PM.png" alt="Annnie dancing">
 </body>
+-->
+
+<style>
+  .menu{
+    background-color: #f0c1b3;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+  }
+  .menu > a{
+    color: hsl(160, 30%, 50%);
+    font-family: sans-serif;
+    font-size: 24px;
+    text-decoration: none;
+    
+  }
+  .menu > a:hover {
+    color: hsl(30, 60%, 50%);
+    font-size: 100px;
+  }
+
+</style>
+
+
+<nav class="menu">
+  <a href="#">videos</a>
+  <a href="#">music</a>
+  <a href="#">thoughts</a>
+  <a href="#">other</a>
+  
+</nav>
+
+  
