--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
   .menu > a:hover {
     color: hsl(30, 60%, 50%);
     font-size: 100px;
+    border-bottom: 40px solid hsl(20, 70%, 50%);
+  }
+  
+  @media (){
+  
+    
   }
 
 </style>
