--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <img src="Screen Shot 2020-12-17 at 3.27.00 PM.png" alt="Annnie dancing">
 </body>
 -->
-
+<!--
 <style>
   .menu{
-    background-color: #f0c1b3;
+    background-color: #eed8ae;
     height: 100px;
     display: flex;
     justify-content: space-between;
@@ -19,7 +19,7 @@
     
   }
   .menu > a{
-    color: hsl(160, 30%, 50%);
+    color: hsl(380, 30%, 50%);
     font-family: sans-serif;
     font-size: 24px;
     text-decoration: none;
@@ -27,15 +27,18 @@
   }
   .menu > a:hover {
     color: hsl(30, 60%, 50%);
-    font-size: 100px;
-    border-bottom: 40px solid hsl(20, 70%, 50%);
+    font-size: 40px;
+    border-bottom: 20px solid hsl(20, 70%, 50%);
   }
   
-  @media (){
   
-    
+  @media (max-width: 400px){
+     .menu {
+      flex-direction: column;
+      align-items: center;
   }
-
+  }
+  
 </style>
 
 
@@ -46,5 +49,24 @@
   <a href="#">other</a>
   
 </nav>
+-->
+
+<style>
+  .gallery{
+    display:grid;
+  }
+
+</style>
+  
+  <section class = gallery>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+  </section>
+
 
   
