--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   
   .gallery > img{
     
-    width: 500px;
+    width:100%;
     background-position: center;
     background-size: cover;
   /* background-color: #c0cbc0;
