--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <nav class="hello">
   <a href="#">music</a>
   <a href="#">art</a>
-  <a href="#">vibes</a>
+  <a href="#">Contact</a>
 </nav>
 
 
 <style>
   .hello{
+    margin: 100px 10px 150px 0px;
     position: absolute;
     right: auto;
     width: 300px;
@@ -33,6 +34,7 @@
     font-family: sans-serif;
     text-decoration: none;
     color: #6da0d6;
+    opacity: 40%;
     
   }
   
@@ -42,6 +44,7 @@
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+     opacity: 80%;
 /*     animation-duration: 2s;
     animation: fadeIn 1s ease-in-out 3s;
   animation-fill-mode: forwards;   */
@@ -55,9 +58,12 @@
 }
 
   .title{
-    font-size: 50px;
+    font-size: 300px;
     font-kerning: normal;
     font-variant-caps: small-caps;
+    position: absolute;
+    left: 12%;
+    top: -2%;
     
   }
 
